test/spec_vectors/align64/ok/module_7.wat
(module (memory i64 0) (func (drop (i64.load16_s align=2 (i64.const 0)))))