test/spec_vectors/align64/fail/module_75.wat
(module (memory i64 0) (func (drop (i64.load8_u align=2 (i64.const 0)))))